{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "45aa2b83-77c1-45bc-a6a3-a5cfcaa8b7db",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d3409622-bdba-4b53-8f43-d213b0508ade",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0288b31-84c1-490d-97c6-86ec09d049dd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}